myparser/CaskellParser.py
# Generated from Caskell.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CaskellParser ( Parser ):

    grammarFileName = "Caskell.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'.'", "'->'", "','", "'::'", "'='", 
                     "'_'", "'func'", "'do'", "'let'", "'if'", "'else'", 
                     "'switch'", "'case'", "'<-'", "'from'", "'include'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Func", "Do", "Let", "If", "Else", "Switch", "Case", 
                      "Arrow", "From", "Include", "Identifier", "Operator", 
                      "Number", "Whitespace", "LeftParen", "RightParen", 
                      "LeftBrace", "RightBrace", "LeftBracket", "RightBracket" ]

    RULE_prog = 0
    RULE_include = 1
    RULE_includePath = 2
    RULE_func = 3
    RULE_argList = 4
    RULE_type = 5
    RULE_block = 6
    RULE_let = 7
    RULE_do = 8
    RULE_expr = 9
    RULE_pattern = 10

    ruleNames =  [ "prog", "include", "includePath", "func", "argList", 
                   "type", "block", "let", "do", "expr", "pattern" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    Func=8
    Do=9
    Let=10
    If=11
    Else=12
    Switch=13
    Case=14
    Arrow=15
    From=16
    Include=17
    Identifier=18
    Operator=19
    Number=20
    Whitespace=21
    LeftParen=22
    RightParen=23
    LeftBrace=24
    RightBrace=25
    LeftBracket=26
    RightBracket=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CaskellParser.EOF, 0)

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.IncludeContext)
            else:
                return self.getTypedRuleContext(CaskellParser.IncludeContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.FuncContext)
            else:
                return self.getTypedRuleContext(CaskellParser.FuncContext,i)


        def getRuleIndex(self):
            return CaskellParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = CaskellParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8 or _la==16:
                self.state = 24
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [16]:
                    self.state = 22
                    self.include()
                    pass
                elif token in [8]:
                    self.state = 23
                    self.func()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self.match(CaskellParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def From(self):
            return self.getToken(CaskellParser.From, 0)

        def includePath(self):
            return self.getTypedRuleContext(CaskellParser.IncludePathContext,0)


        def Include(self):
            return self.getToken(CaskellParser.Include, 0)

        def Identifier(self):
            return self.getToken(CaskellParser.Identifier, 0)

        def getRuleIndex(self):
            return CaskellParser.RULE_include

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = CaskellParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(CaskellParser.From)
            self.state = 32
            self.includePath()
            self.state = 33
            self.match(CaskellParser.Include)
            self.state = 34
            self.match(CaskellParser.Identifier)
            self.state = 35
            self.match(CaskellParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludePathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(CaskellParser.Identifier)
            else:
                return self.getToken(CaskellParser.Identifier, i)

        def getRuleIndex(self):
            return CaskellParser.RULE_includePath

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludePath" ):
                return visitor.visitIncludePath(self)
            else:
                return visitor.visitChildren(self)




    def includePath(self):

        localctx = CaskellParser.IncludePathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_includePath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(CaskellParser.Identifier)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 38
                self.match(CaskellParser.T__1)
                self.state = 39
                self.match(CaskellParser.Identifier)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Func(self):
            return self.getToken(CaskellParser.Func, 0)

        def Identifier(self):
            return self.getToken(CaskellParser.Identifier, 0)

        def LeftParen(self):
            return self.getToken(CaskellParser.LeftParen, 0)

        def argList(self):
            return self.getTypedRuleContext(CaskellParser.ArgListContext,0)


        def RightParen(self):
            return self.getToken(CaskellParser.RightParen, 0)

        def block(self):
            return self.getTypedRuleContext(CaskellParser.BlockContext,0)


        def type_(self):
            return self.getTypedRuleContext(CaskellParser.TypeContext,0)


        def getRuleIndex(self):
            return CaskellParser.RULE_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = CaskellParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(CaskellParser.Func)
            self.state = 46
            self.match(CaskellParser.Identifier)
            self.state = 47
            self.match(CaskellParser.LeftParen)
            self.state = 48
            self.argList()
            self.state = 49
            self.match(CaskellParser.RightParen)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 50
                self.match(CaskellParser.T__2)
                self.state = 51
                self.type_(0)


            self.state = 54
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.PatternContext)
            else:
                return self.getTypedRuleContext(CaskellParser.PatternContext,i)


        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.TypeContext)
            else:
                return self.getTypedRuleContext(CaskellParser.TypeContext,i)


        def getRuleIndex(self):
            return CaskellParser.RULE_argList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = CaskellParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & 72614016) != 0:
                    self.state = 56
                    self.pattern(0)
                    self.state = 61
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==4:
                        self.state = 57
                        self.match(CaskellParser.T__3)
                        self.state = 58
                        self.pattern(0)
                        self.state = 63
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.pattern(0)
                self.state = 67
                self.match(CaskellParser.T__4)
                self.state = 68
                self.type_(0)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 69
                    self.match(CaskellParser.T__3)
                    self.state = 70
                    self.pattern(0)
                    self.state = 71
                    self.match(CaskellParser.T__4)
                    self.state = 72
                    self.type_(0)
                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CaskellParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class TypeCallContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.TypeContext)
            else:
                return self.getTypedRuleContext(CaskellParser.TypeContext,i)

        def LeftParen(self):
            return self.getToken(CaskellParser.LeftParen, 0)
        def RightParen(self):
            return self.getToken(CaskellParser.RightParen, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeCall" ):
                return visitor.visitTypeCall(self)
            else:
                return visitor.visitChildren(self)


    class TypeArrayContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LeftBracket(self):
            return self.getToken(CaskellParser.LeftBracket, 0)
        def type_(self):
            return self.getTypedRuleContext(CaskellParser.TypeContext,0)

        def RightBracket(self):
            return self.getToken(CaskellParser.RightBracket, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeArray" ):
                return visitor.visitTypeArray(self)
            else:
                return visitor.visitChildren(self)


    class TypeArrowContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.TypeContext)
            else:
                return self.getTypedRuleContext(CaskellParser.TypeContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeArrow" ):
                return visitor.visitTypeArrow(self)
            else:
                return visitor.visitChildren(self)


    class TypeTupleContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LeftParen(self):
            return self.getToken(CaskellParser.LeftParen, 0)
        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.TypeContext)
            else:
                return self.getTypedRuleContext(CaskellParser.TypeContext,i)

        def RightParen(self):
            return self.getToken(CaskellParser.RightParen, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeTuple" ):
                return visitor.visitTypeTuple(self)
            else:
                return visitor.visitChildren(self)


    class TypeIdentifierContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(CaskellParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeIdentifier" ):
                return visitor.visitTypeIdentifier(self)
            else:
                return visitor.visitChildren(self)


    class TypeParensContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LeftParen(self):
            return self.getToken(CaskellParser.LeftParen, 0)
        def type_(self):
            return self.getTypedRuleContext(CaskellParser.TypeContext,0)

        def RightParen(self):
            return self.getToken(CaskellParser.RightParen, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeParens" ):
                return visitor.visitTypeParens(self)
            else:
                return visitor.visitChildren(self)



    def type_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CaskellParser.TypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_type, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = CaskellParser.TypeIdentifierContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx


                self.state = 82
                self.match(CaskellParser.Identifier)
                pass

            elif la_ == 2:
                localctx = CaskellParser.TypeParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 83
                self.match(CaskellParser.LeftParen)
                self.state = 84
                self.type_(0)
                self.state = 85
                self.match(CaskellParser.RightParen)
                pass

            elif la_ == 3:
                localctx = CaskellParser.TypeTupleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 87
                self.match(CaskellParser.LeftParen)
                self.state = 88
                self.type_(0)
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 89
                    self.match(CaskellParser.T__3)
                    self.state = 90
                    self.type_(0)
                    self.state = 93 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==4):
                        break

                self.state = 95
                self.match(CaskellParser.RightParen)
                pass

            elif la_ == 4:
                localctx = CaskellParser.TypeArrayContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 97
                self.match(CaskellParser.LeftBracket)
                self.state = 98
                self.type_(0)
                self.state = 99
                self.match(CaskellParser.RightBracket)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 119
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = CaskellParser.TypeArrowContext(self, CaskellParser.TypeContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_type)
                        self.state = 103
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 104
                        self.match(CaskellParser.T__2)
                        self.state = 105
                        self.type_(2)
                        pass

                    elif la_ == 2:
                        localctx = CaskellParser.TypeCallContext(self, CaskellParser.TypeContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_type)
                        self.state = 106
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 107
                        self.match(CaskellParser.LeftParen)
                        self.state = 116
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if ((_la) & ~0x3f) == 0 and ((1 << _la) & 71565312) != 0:
                            self.state = 108
                            self.type_(0)
                            self.state = 113
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==4:
                                self.state = 109
                                self.match(CaskellParser.T__3)
                                self.state = 110
                                self.type_(0)
                                self.state = 115
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 118
                        self.match(CaskellParser.RightParen)
                        pass

             
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftBrace(self):
            return self.getToken(CaskellParser.LeftBrace, 0)

        def expr(self):
            return self.getTypedRuleContext(CaskellParser.ExprContext,0)


        def RightBrace(self):
            return self.getToken(CaskellParser.RightBrace, 0)

        def let(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.LetContext)
            else:
                return self.getTypedRuleContext(CaskellParser.LetContext,i)


        def do(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.DoContext)
            else:
                return self.getTypedRuleContext(CaskellParser.DoContext,i)


        def getRuleIndex(self):
            return CaskellParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CaskellParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(CaskellParser.LeftBrace)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==10:
                self.state = 127
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10]:
                    self.state = 125
                    self.let()
                    pass
                elif token in [9]:
                    self.state = 126
                    self.do()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.expr(0)
            self.state = 133
            self.match(CaskellParser.RightBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Let(self):
            return self.getToken(CaskellParser.Let, 0)

        def Identifier(self):
            return self.getToken(CaskellParser.Identifier, 0)

        def expr(self):
            return self.getTypedRuleContext(CaskellParser.ExprContext,0)


        def getRuleIndex(self):
            return CaskellParser.RULE_let

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet" ):
                return visitor.visitLet(self)
            else:
                return visitor.visitChildren(self)




    def let(self):

        localctx = CaskellParser.LetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_let)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(CaskellParser.Let)
            self.state = 136
            self.match(CaskellParser.Identifier)
            self.state = 137
            self.match(CaskellParser.T__5)
            self.state = 138
            self.expr(0)
            self.state = 139
            self.match(CaskellParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Do(self):
            return self.getToken(CaskellParser.Do, 0)

        def expr(self):
            return self.getTypedRuleContext(CaskellParser.ExprContext,0)


        def Identifier(self):
            return self.getToken(CaskellParser.Identifier, 0)

        def Arrow(self):
            return self.getToken(CaskellParser.Arrow, 0)

        def getRuleIndex(self):
            return CaskellParser.RULE_do

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo" ):
                return visitor.visitDo(self)
            else:
                return visitor.visitChildren(self)




    def do(self):

        localctx = CaskellParser.DoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_do)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(CaskellParser.Do)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 142
                self.match(CaskellParser.Identifier)
                self.state = 143
                self.match(CaskellParser.Arrow)


            self.state = 146
            self.expr(0)
            self.state = 147
            self.match(CaskellParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CaskellParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.ExprContext)
            else:
                return self.getTypedRuleContext(CaskellParser.ExprContext,i)

        def LeftParen(self):
            return self.getToken(CaskellParser.LeftParen, 0)
        def RightParen(self):
            return self.getToken(CaskellParser.RightParen, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)


    class NumberContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Number(self):
            return self.getToken(CaskellParser.Number, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(CaskellParser.Identifier, 0)
        def LeftParen(self):
            return self.getToken(CaskellParser.LeftParen, 0)
        def Operator(self):
            return self.getToken(CaskellParser.Operator, 0)
        def RightParen(self):
            return self.getToken(CaskellParser.RightParen, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)


    class TupleContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LeftParen(self):
            return self.getToken(CaskellParser.LeftParen, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.ExprContext)
            else:
                return self.getTypedRuleContext(CaskellParser.ExprContext,i)

        def RightParen(self):
            return self.getToken(CaskellParser.RightParen, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTuple" ):
                return visitor.visitTuple(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LeftParen(self):
            return self.getToken(CaskellParser.LeftParen, 0)
        def expr(self):
            return self.getTypedRuleContext(CaskellParser.ExprContext,0)

        def RightParen(self):
            return self.getToken(CaskellParser.RightParen, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class ArrayContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LeftBracket(self):
            return self.getToken(CaskellParser.LeftBracket, 0)
        def RightBracket(self):
            return self.getToken(CaskellParser.RightBracket, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.ExprContext)
            else:
                return self.getTypedRuleContext(CaskellParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def If(self):
            return self.getToken(CaskellParser.If, 0)
        def expr(self):
            return self.getTypedRuleContext(CaskellParser.ExprContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.BlockContext)
            else:
                return self.getTypedRuleContext(CaskellParser.BlockContext,i)

        def Else(self):
            return self.getToken(CaskellParser.Else, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class OperationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.ExprContext)
            else:
                return self.getTypedRuleContext(CaskellParser.ExprContext,i)

        def Operator(self):
            return self.getToken(CaskellParser.Operator, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)


    class SwitchContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CaskellParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Switch(self):
            return self.getToken(CaskellParser.Switch, 0)
        def expr(self):
            return self.getTypedRuleContext(CaskellParser.ExprContext,0)

        def LeftBrace(self):
            return self.getToken(CaskellParser.LeftBrace, 0)
        def RightBrace(self):
            return self.getToken(CaskellParser.RightBrace, 0)
        def Case(self, i:int=None):
            if i is None:
                return self.getTokens(CaskellParser.Case)
            else:
                return self.getToken(CaskellParser.Case, i)
        def pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.PatternContext)
            else:
                return self.getTypedRuleContext(CaskellParser.PatternContext,i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaskellParser.BlockContext)
            else:
                return self.getTypedRuleContext(CaskellParser.BlockContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitch" ):
                return visitor.visitSwitch(self)
            else:
                return visitor.visitChildren(self)


